--- a/composer.json
+++ b/composer.json
@@ -14,11 +14,5 @@
       "email": "rob@dev-toolbox.co.uk"
     }
   ],
-  "minimum-stability": "dev",
-  "require": {
-    "ext-curl": "*"
-  },
-  "require-dev": {
-    "phpunit/phpunit": "^7"
-  }
+  "minimum-stability": "dev"
 }
