--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,5 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <phpunit>
+
+
+    <filter>
+        <whitelist>
+            <directory>./src</directory>
+            <exclude>
+                <directory>./vendor</directory>
+                <directory>./tests</directory>
+            </exclude>
+        </whitelist>
+    </filter>
+
     <testsuites>
         <testsuite name="devToolbox hashing">
             <directory prefix="test-" suffix=".php">./tests/</directory>
